--- a/data/engine.ini
+++ b/data/engine.ini
@@ -6,13 +6,13 @@ COAST_CURVE=FROM_COAST_REF 		; coast curve. can define 3 different options (coas
 [ENGINE_DATA]
 ALTITUDE_SENSITIVITY=0.1			; sensitivity to altitude
 INERTIA=0.13					; engine inertia
-LIMITER=7100					; A 116 is rev limited at about 7,100 RPM
+LIMITER=7500					; A 116 doesn't have a rev limiter but if I diable it messes with the instrument panel so setting artificially high
 LIMITER_HZ=12					; Frequency of engine limiter
-MINIMUM=750					; Idle rpm for a 116
+MINIMUM=850					; Idle rpm
 DEFAULT_TURBO_ADJUSTMENT=0 			; DEFAULT turbo adjustment if one or more turbos are cockpit adjustable
 
 [COAST_REF]
-RPM=7100						; rev number reference
+RPM=7250						; rev number reference
 TORQUE=65						; engine braking torque value in Nm at rev number reference
 NON_LINEARITY=0					; coast engine brake from ZERO to TORQUE value at rpm with linear (0) to fully exponential (1)
 
@@ -27,5 +27,5 @@ FILENAME=coast.lut; coasting curve file
 [DAMAGE]
 TURBO_BOOST_THRESHOLD=1.40  ; level of TOTAL boost before the engine starts to take damage
 TURBO_DAMAGE_K=5; amount of damage per second per (boost - threshold)
-RPM_THRESHOLD=7250; RPM at which the engine starts to take damage
+RPM_THRESHOLD=7700; RPM at which the engine starts to take damage
 RPM_DAMAGE_K=1; amount of damage per second per (rpm-threshold)
