Corrected the power curve

--- a/data/car.ini
+++ b/data/car.ini
@@ -7,7 +7,7 @@ SCREEN_NAME=BMW 116 Trophy						; Name of the car. Used on info apps ingame and 
 [BASIC]
 GRAPHICS_OFFSET=0.0,-0.47,-0.075	; 3 axis correction (x,y,z), applies only to the 3D object of the car (meters)
 GRAPHICS_PITCH_ROTATION=-0.1				; Changes 3D object rotation in pitch (degrees)
-TOTALMASS=1115								; Total vehicle weight in kg with driver and no fuel - 1,130kg for the car and 85kg for the driver reduced 100kg
+TOTALMASS=1220								; Total vehicle weight in kg with driver and no fuel - 1,130kg for the car and 90kg for the driver
 INERTIA=1.66,1.13,3.52							; Car polar inertia. Calculated from the car dimensions. Start with the generic width,height,length and modify accordingly to the car's configuration 
 
 [GRAPHICS]
