BUG FIX: Set limiter to 7,050 rpm

--- a/data/engine.ini
+++ b/data/engine.ini
@@ -6,7 +6,7 @@ COAST_CURVE=FROM_COAST_REF 		; coast curve. can define 3 different options (coas
 [ENGINE_DATA]
 ALTITUDE_SENSITIVITY=0.1			; sensitivity to altitude
 INERTIA=0.13					; engine inertia
-LIMITER=7500					; A 116 doesn't have a rev limiter but if I diable it messes with the instrument panel so setting artificially high
+LIMITER=7050					; A 116 has a rev limit of about 7,050 rpm
 LIMITER_HZ=12					; Frequency of engine limiter
 MINIMUM=850					; Idle rpm
 DEFAULT_TURBO_ADJUSTMENT=0 			; DEFAULT turbo adjustment if one or more turbos are cockpit adjustable
