Correct kph:rpm with tyre radius change

--- a/data/tyres.ini
+++ b/data/tyres.ini
@@ -246,7 +246,8 @@ SURFACE_ROLLING_K=1.29285
 NAME=Nankang NS-2R
 SHORT_NAME=SM
 WIDTH=0.2050
-RADIUS=0.29
+; RADIUS=0.29
+RADIUS=0.287
 RIM_RADIUS=0.2286
 ANGULAR_INERTIA=1.2000
 DAMP=500
@@ -306,7 +307,8 @@ SURFACE_ROLLING_K=1.24229
 NAME=Nankang NS-2R
 SHORT_NAME=SM
 WIDTH=0.2050
-RADIUS=0.29
+; RADIUS=0.29
+RADIUS=0.287
 RIM_RADIUS=0.2286
 ANGULAR_INERTIA=1.2000
 DAMP=500
