BUG: Fix low power and mid-corner understeer Several users have reported that the mod seems sluggish.  The torque curve was taken from a real 116 Trophy car and then reduced by 15% to account for transmission loss.  With this configuration it was not possible to match sim lap times to real life lap times.  For example, a lap of Thruxton would be typically 2 seconds slower and top speed 165 kph in the sim vs. 179 kph IRL.  The power.lut values have been set to flywheel values.  This may need to be changed later, although a faster model is better than a slower one for the purposes of practising a track.
The model suffered from mid-corner understeer, as power is applied.
IRL, 116 Trophy cars exhibit this behaviour when the rear shocks are set
soft.  This commit includes an increase to the default rear bump value,
and a new Damper tab in the Setup display.

--- a/data/setup.ini
+++ b/data/setup.ini
@@ -176,3 +176,25 @@ STEP=1
 POS_X=0.5
 POS_Y=1
 HELP=HELP_BRAKE_POWER_MULT
+
+[DAMP_BUMP_LR]
+SHOW_CLICKS=2
+TAB=DAMPERS
+NAME=Bump LR
+MIN=1500
+MAX=4000
+STEP=100
+POS_X=0
+POS_Y=0
+HELP=HELP_LR_DAMPER_BUMP
+
+[DAMP_BUMP_RR]
+SHOW_CLICKS=2
+TAB=DAMPERS
+NAME=Bump RR
+MIN=1500
+MAX=4000
+STEP=100
+POS_X=1
+POS_Y=0
+HELP=HELP_RR_DAMPER_BUMP
