--- a/data/suspensions.ini
+++ b/data/suspensions.ini
@@ -67,7 +67,8 @@ BUMP_STOP_RATE=35000				; bump stop spring rate
 BUMPSTOP_UP=0.070							; meters to upper bumpstop from the 0 design of the suspension
 BUMPSTOP_DN=0.165							; meters to bottom bumpstop from the 0 design of the suspension
 PACKER_RANGE=0.280						; Total suspension movement range, before hitting packers
-DAMP_BUMP=1730
+;DAMP_BUMP=1730
+DAMP_BUMP=2200
 DAMP_FAST_BUMP=1150
 DAMP_FAST_BUMPTHRESHOLD=0.030								; Damper wheel rate stiffness in N sec/m in slow speed compression					; Damper bump slow/fast threshold in seconds
 DAMP_REBOUND=6000											; Damper rebound slow/fast threshold in seconds 
